traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:16: error: Missing closing brace `}' assumed here
def parcours1(){
^