traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  var x:Int=0
  var y:Int=0
  var i:Int=0
	x=getX()
 	y=getY()
	
  for(i<- 0 to 6){
    parcours2()
  }
  
  
  


def parcours1(){
  var x:Int=0
  var y:Int=0
  x=getX()
  y=getY()
  setPos(x-1,y)   
}
def parcours2(){
  var x:Int=0
  var y:Int=0
  x=getX()
  y=getY()
  setPos(x+1,y)  
}


def positionTest():Boolean={
  if(getMondeHauteur()-1==getY() && getMondeLargeur()-1==getX()){
    return true
  }else {
    return false
  }
  
}